Add first endpoints for controllers with mock data
